<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.qiu.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:id="@+id/textView3" />

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_marginTop="48dp"
        android:layout_marginStart="15dp"
         />

    <Button
        android:text="@string/ButtonText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginTop="32dp"
        android:id="@+id/button3" />

    <Button
        android:text="@string/ButtonWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnWeather"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button3"
        android:layout_marginStart="7dp" />

    <Button
        android:text="@string/ButtonToolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTest"
        android:layout_below="@+id/btnWeather"
        android:layout_alignStart="@+id/btnWeather"
        android:layout_marginTop="14dp" />

</RelativeLayout>
